SERVER-15029: missing rename source field should be a no-op

(cherry picked from commit 8f8e59a78107a079c5367abdc31580d20428d9cc)